css/web.css
/* ----------------------------------

Web overall style

Web Green Color
Hex - #20B981
RGB - (32, 185, 129)
----------------------------------*/

body {
  color: #1A1A1A;
}

.printy{
  display: none;
}
.noprinty{
  display: visible;
}

.toc {
  position: fixed;
  top: 15px;
  left: 15px;
  width: 115px;
  text-align: center;
  display: block;
  padding: 10px;
  border-bottom: 3px solid blue;
}

.site-title{
  cursor: pointer;
}

code {
	font: 0.8rem/1.4 Messenger Mono, monospace;
	background: rgba(0, 255, 0, .04);
	border: 1px solid rgba(0,255,0,0.1);
	padding: 0.1in 0in;
	margin: 1em 0in;
	display: inline-block;
  width: 100%;
}

/* ----------------------------------

Interview & Project Styles

----------------------------------*/
q { background-color: gold;}
del { text-decoration:line-through; color: grey;}
mark { font-style: normal; background: rgba(32, 185, 129, .1);}
s { color: grey;}
img{
  /* margin-left: -20px;
  margin-top: 20px;
  margin-bottom: 20px; */
}

.interview-name{
  color: #20B981;
}
.interview-bar{
  border-bottom: 5pt solid #20B981;
}


.wrapper div, p, figure, figcaption{
  max-width: 500px;
  margin: auto;
} .wrapper img {
  height:auto;
  max-width: 800px;
  margin-left: auto;
  margin-top: 15px;
  display: inline-block;
}

.interview-q:before, .interview-a:before  {
  font-size: 15px;
}
.interview-q:before{
  color: #20B981;
}
.interview-a:before{
  color: black;
}

.interview-a { text-indent: 20px;  }
.interview-q { padding-left: 20px; color: #20B981;}
.interview-a, .interview-q { font-size: 20px; }

.title {
  font-family: "Benton Modern";
  font-style: normal;
  font-weight: bold;
  font-size: 60px;
  line-height: 110%;
  width: 500px;
  margin: auto;
}

hr {
  border-bottom: 7px solid #1A1A1A;
  width: 25%;
  height: 8px;
  margin-top: 25px;
  margin-bottom: 35px;
}

.interview {
  margin:auto;
  width: 60%;
}

.interview-q{

  font-family: 'Messenger Text';
  font-size:24px;

  color: #20B981;

  width:450px;
  margin-left:30%;
  margin-bottom:-15px;
  margin-top:55px;

}

.interview-a{
  margin-bottom:15px;
  font-size:18px;
  line-height:1.5em;
}

blockquote{
  font-family: 'Messenger Text';
  font-size:24px;
  line-height:1.5em;

  width:600px;
  margin:auto;
  margin-bottom:55px;
  margin-top:55px;

}

.interview-intro {
  width:500px;
  margin:auto;
  border-bottom:1px dotted black;
  font-size:24px;
  font-family:'Benton Modern';
  margin-top: 55px;
  margin-bottom:55px;
  padding-bottom: 15px;
}

/* ----------------------------------

General Styling

----------------------------------*/

p {

    width:500px;
    margin:auto;
    font-size:18px;
    line-height:1.5em;
    margin-bottom:15px;
}

a {
    color:rgb(55,50,255);
    text-decoration: none;
} a:hover {
    background-color:rgb(55,50,255);
}

#nav_box{
}
.toglee{
  display: none;
  max-height: 5000px;
}



/*-----Media Query maybe-----*/
@media (max-width: 640px) {
  .interview-q {
    font-family:'Benton Modern';
    font-size:18px;
    margin:auto;
    margin-top:55px;
    margin-bottom:15px;
  }
}

